Fixed word wrapping in output, changed output and fixed carret misalignment.

--- a/terminal/console.css
+++ b/terminal/console.css
@@ -21,6 +21,8 @@
 	font-weight: 100;
 	font-size: 12px;
 	line-height: 1.3333em;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 .console-input-container {
